--- a/HCIProject/SubjectSchedule/SubjectSchedule/SubjectSchedule.csproj
+++ b/HCIProject/SubjectSchedule/SubjectSchedule/SubjectSchedule.csproj
@@ -62,6 +62,9 @@
     </Compile>
     <Compile Include="Softvare.cs" />
     <Compile Include="Subject.cs" />
+    <Compile Include="Subjests.xaml.cs">
+      <DependentUpon>Subjests.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -75,6 +78,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Subjests.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
