--- a/HCIProject/SubjectSchedule/SubjectSchedule/SubjectSchedule.csproj
+++ b/HCIProject/SubjectSchedule/SubjectSchedule/SubjectSchedule.csproj
@@ -54,6 +54,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classrooms.xaml.cs">
+      <DependentUpon>Classrooms.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Course.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -65,6 +68,10 @@
     <Compile Include="Subjests.xaml.cs">
       <DependentUpon>Subjests.xaml</DependentUpon>
     </Compile>
+    <Page Include="Classrooms.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
